Encart annees 2000 ajoute

--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
     <h1 href="#section-ru">По русски</h1>
     <h1 href="#section-fr">En français</h1>
     <h1 href="#section-en">In English</h1>-->
-
+  
+    <div style="background-color:#e884d0;color:white;padding:2%;text-align:center;">
+    <h3>
+        <span style='font-size:50px;'>&#11014;</span> Нажмите на выбранный вами язык, за ним скрывается сайт! <span style='font-size:50px;'>&#11014;</span>
+    </h2>
+    <h3>
+        <span style='font-size:50px;'>&#11014;</span> Cliquez sur la langue de votre choix, il y a tout un site derrière ! <span style='font-size:50px;'>&#11014;</span>
+    </h3>
+    <h3>
+        <span style='font-size:50px;'>&#11014;</span> Click on the language of your choice, there's a website behind! <span style='font-size:50px;'>&#11014;</span>
+    </h3>
+    </div>
 
     <h2 id="section-ru">Добро пожаловать!</h2>
     <p>
