--- a/ressources-fr/index.html
+++ b/ressources-fr/index.html
@@ -47,6 +47,9 @@
             <td class="navigation">
                 <a class="current" title="Ressources" href="ressources-fr">Ressources</a>
             </td>
+            <td class="navigation">
+                <a title="Foire aux Questions" href="q-a-fr"> FAQ</a>
+            </td>
  <!--             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>  -->
