Modifs QA fr et en + ajout logo couleur

--- a/q-a-en/index.html
+++ b/q-a-en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='en'>
 
 <head>
     <base href="..">
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Foire aux Questions | ODDTALE 2025</title>
+    <title>Frequently asked questions | ODDTALE 2025</title>
     <style>
         img {
             width: 100%;
@@ -29,7 +29,7 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> 31 Mai 2025 <br> La
+            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La
             Boutardière, 36100 La Champenoise, France
         </div>
     </div>
@@ -37,24 +37,24 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Page d'accueil de la conférence" href="./home-fr/">Accueil</a>
+                <a title="Conference Home Page" href="./home-en/">Home</a>
             </td>
             <td class="navigation">
-                <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
+                <a title="Register for the Conference" href="registration-en">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Programme de la conférence" href="program-fr">Programme</a>
+                <a class="current" title="Conference Program" href="program-en">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
+                <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources-fr">Ressources</a>
+                <a title="Resources" href="ressources-en">Resources</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Foire aux Questions" href="q-a-fr"> FAQ</a>
+                <a class="current" title="Frequently asked questions" href="q-a-en"> FAQ</a>
             </td>
-            <!--            <td class="navigation">
+   <!--         <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td> -->
         </tr>
@@ -81,21 +81,21 @@ Dimanche :
 11h : brunch et discutaille
 15h : soirée de rangement festive  -->
 
-<h2>Vos questions, nos réponses !</h2>
+<h2>Your questions, our answers!</h2>
 
-    <h3>Nourriture</h3>
+    <h3>Food</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                C'est quand qu'on mange ?
+                When do we get to eat?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Un peu tout le temps, n'hésitez pas à prévoir des boîtes pour repartir avec des souvenirs mangeables !
+                More or less all the time, so come with boxes if you'd like to take home edible souvenirs!
             </td>
         </tr>
     </table>
@@ -107,12 +107,12 @@ Dimanche :
 
             </td>
             <td class="title">
-                Est-ce qu'il y a une liste de mariage ?
+                Is there a wedding registry?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Il y a une cagnotte dont le lien peut être trouvé ici : https://www.papayoux.com/fr/cagnotte/oddtale-2025, et il y aura une boîte sur place. Nous aimons
+                Il y a une cagnotte dont le lien peut être trouvé ici : , et il y aura une boîte sur place. Nous aimons
                 beaucoup les cartes postales !
             </td>
         </tr>
@@ -162,7 +162,7 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Il y a un framacalc qui peut être retrouvé ici : https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww, n'hésitez pas à y jeter un coup d'oeil pour vous
+                Il y a un framapad qui peut être retrouvé ici : , n'hésitez pas à y jeter un coup d'oeil pour vous
                 organiser !
             </td>
         </tr>
