--- a/q-a-fr/index.html
+++ b/q-a-fr/index.html
@@ -112,7 +112,7 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Il y a une cagnotte dont le lien peut être trouvé ici : https://www.papayoux.com/fr/cagnotte/oddtale-2025, et il y aura une boîte sur place. Nous aimons
+                Il y a une cagnotte dont le lien peut être trouvé ici : <a href="url">https://www.papayoux.com/fr/cagnotte/oddtale-2025</a>, et il y aura une boîte sur place. Nous aimons
                 beaucoup les cartes postales !
             </td>
         </tr>
@@ -162,7 +162,8 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Il y a un framacalc qui peut être retrouvé ici : https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww, n'hésitez pas à y jeter un coup d'oeil pour vous
+                Il y a un framacalc qui peut être retrouvé ici : 
+                <a href="url">https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww</a>, n'hésitez pas à y jeter un coup d'oeil pour vous
                 organiser !
             </td>
         </tr>
