fixed links in QAfr

--- a/q-a-fr/index.html
+++ b/q-a-fr/index.html
@@ -112,7 +112,7 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Il y a une cagnotte dont le lien peut être trouvé ici : <a href="url">https://www.papayoux.com/fr/cagnotte/oddtale-2025</a>, et il y aura une boîte sur place. Nous aimons
+                Il y a une cagnotte dont le lien peut être trouvé ici : <a href="https://www.papayoux.com/fr/cagnotte/oddtale-2025">https://www.papayoux.com/fr/cagnotte/oddtale-2025</a>, et il y aura une boîte sur place. Nous aimons
                 beaucoup les cartes postales !
             </td>
         </tr>
@@ -163,7 +163,7 @@ Dimanche :
         <tr>
             <td class="abstract">
                 Il y a un framacalc qui peut être retrouvé ici : 
-                <a href="url">https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww</a>, n'hésitez pas à y jeter un coup d'oeil pour vous
+                <a href="https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww">https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww</a>, n'hésitez pas à y jeter un coup d'oeil pour vous
                 organiser !
             </td>
         </tr>
