--- a/q-a-en/index.html
+++ b/q-a-en/index.html
@@ -100,7 +100,7 @@ Dimanche :
         </tr>
     </table>
 
-    <h3>Cadeaux</h3>
+    <h3>Gifts</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
@@ -112,27 +112,25 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Il y a une cagnotte dont le lien peut être trouvé ici : , et il y aura une boîte sur place. Nous aimons
-                beaucoup les cartes postales !
+                We set up a money pot, the link is here: <a href="https://www.papayoux.com/fr/cagnotte/oddtale-2025">https://www.papayoux.com/fr/cagnotte/oddtale-2025</a>, and there will be a box on the wedding site. We also love postcards!
             </td>
         </tr>
     </table>
 
-    <h3>Lieu</h3>
+    <h3>Venue</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                Est-ce qu'il y a un code vestimentaire préconisé ?
+                Is there a dress code?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Oui et non : si vous avez des habits inhabituels, que vous aimez, et que vous avez rarement l'occasion
-                de mettre, c'est le moment de briller ! Mais que le confort reste le plus important, nous voulons vous
-                voir magnifiques de bien-être, et les paillettes extérieures ne sont que du bonus.
+                Yes and no: if you have unusual clothes that you love, but rarely get the chance to wear, now's the time to shine!
+                But please, prioritise comfort, we want to see you feeling the best, and the glitter on the outside is just a bonus.
             </td>
         </tr>
         <tr>
@@ -140,49 +138,46 @@ Dimanche :
 
             </td>
             <td class="title">
-                Est-ce que les animaux sont bienvenus ?
+                Are pets welcome?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Malheureusement les animaux ne sont pas bienvenus : le domaine est ouvert sur la route et surtout sur la maison des propriétaires, qui possèdent un chien qui n'aime pas partager son territoire. Des photos de vos animaux sont par contre tout à fait bienvenues, et ce à tout moment !
+                Unfortunately, pets are not welcome: the estate is open to the road and, above all, to the house of the owners, who have a dog that doesn't like to share its territory. Photos of your pets, however, are very welcome at any time!
             </td>
         </tr>
     </table>
 
-    <h3>Covoiturages</h3>
+    <h3>Carpools</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                On a des places dans des voitures / on cherche des places dans des voitures !
+                We have places in cars / we're looking for places in cars!
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Il y a un framapad qui peut être retrouvé ici : , n'hésitez pas à y jeter un coup d'oeil pour vous
-                organiser !
+                There's a framacalc that can be found here: <a href="https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww">https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww</a>, please take a look at it to get organized!
             </td>
         </tr>
     </table>
 
-    <h3>Les questions inclassables</h3>
+    <h3>Unclassifiable questions</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                Est-ce que vous avez bien réfléchi avant de prendre une telle
-                décision ?
+                Did you think carefully before making such a decision?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Honnêtement, plutôt oui. La décision de réunir nos ami·e·s et nos familles est quelque chose qui nous
-                tient vraiment à coeur, et nous avions envie d'organiser ce moment. Hâte de le partager avec vous !
+                Honestly, yes. The decision to bring our friends and families together is something we feel very strongly about, and we wanted to organize this moment. We can't wait to share it with you!
             </td>
         </tr>
     </table>
