Logos + russian q and a

--- a/q-a-ru/index.html
+++ b/q-a-ru/index.html
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Foire aux Questions | ODDTALE 2025</title>
+    <title>Часто задаваемые вопросы | ODDTALE 2025</title>
     <style>
         img {
             width: 100%;
@@ -29,32 +29,31 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> 31 Mai 2025 <br> La
-            Boutardière, 36100 La Champenoise, France
+            Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям <br> 31 мая 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Page d'accueil de la conférence" href="./home-fr/">Accueil</a>
+                <a title="Выбор языка" href="./home-ru/">Главная</a>
             </td>
             <td class="navigation">
-                <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
+                <a title="Записаться на конференцию" href="registration-ru">Запись</a>
             </td>
             <td class="navigation">
-                <a title="Programme de la conférence" href="program-fr">Programme</a>
+                <a class="current" title="Программа конференции" href="program-ru">Программа</a> 
             </td>
             <td class="navigation">
-                <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
+                <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources-fr">Ressources</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Foire aux Questions" href="q-a-fr"> FAQ</a>
+                <a class="current" title="Часто задаваемые вопросы" href="q-a-ru">Вопросы</a>
             </td>
-            <!--            <td class="navigation">
+<!--            <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td> -->
         </tr>
@@ -81,58 +80,56 @@ Dimanche :
 11h : brunch et discutaille
 15h : soirée de rangement festive  -->
 
-<h2>Vos questions, nos réponses !</h2>
+<h2>Ваши вопросы, наши ответы!</h2>
 
-    <h3>Nourriture</h3>
+    <h3>Еда</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                C'est quand qu'on mange ?
+                Когда мы будем есть?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Un peu tout le temps, n'hésitez pas à prévoir des boîtes pour repartir avec des souvenirs mangeables !
+                Более или менее все время, так что приходите с контейнерами, если хотите увезти домой съедобные сувениры!
             </td>
         </tr>
     </table>
 
-    <h3>Cadeaux</h3>
+    <h3>Подарки</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                Est-ce qu'il y a une liste de mariage ?
+                Есть ли у вас свадебный реестр?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Il y a une cagnotte dont le lien peut être trouvé ici : , et il y aura une boîte sur place. Nous aimons
-                beaucoup les cartes postales !
+                Мы организовали денежный фонд, ссылка здесь: <a href="https://www.papayoux.com/fr/cagnotte/oddtale-2025">https://www.papayoux.com/fr/cagnotte/oddtale-2025</a>, и на месте свадьбы будет коробка. А еще мы любим открытки!
             </td>
         </tr>
     </table>
 
-    <h3>Lieu</h3>
+    <h3>Празднование</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                Est-ce qu'il y a un code vestimentaire préconisé ?
+                Есть ли дресс-код?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Oui et non : si vous avez des habits inhabituels, que vous aimez, et que vous avez rarement l'occasion
-                de mettre, c'est le moment de briller ! Mais que le confort reste le plus important, nous voulons vous
-                voir magnifiques de bien-être, et les paillettes extérieures ne sont que du bonus.
+                И да, и нет: если у вас есть необычная одежда, которую вы любите, но редко надеваете, то самое время блеснуть!
+                Но, пожалуйста, отдавайте предпочтение комфорту, мы хотим, чтобы вы чувствовали себя как можно лучше, а блестки - это просто приятный бонус.
             </td>
         </tr>
         <tr>
@@ -140,43 +137,40 @@ Dimanche :
 
             </td>
             <td class="title">
-                Est-ce que les animaux sont bienvenus ?
+                Можно ли привезти домашних животных?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Malheureusement les animaux ne sont pas bienvenus : le domaine est ouvert sur la route et surtout sur la maison des propriétaires, qui possèdent un chien qui n'aime pas partager son territoire. Des photos de vos animaux sont par contre tout à fait bienvenues, et ce à tout moment !
+                К сожалению, домашние животные не приветствуются: усадьба выходит на дорогу и, в первую очередь, на дом хозяев, у которых есть собака, не любящая делиться своей территорией. Зато фотографии ваших питомцев очень приветствуются!            </td>
+        </tr>
+    </table>
+
+    <h3>Автомобильные маршруты</h3>
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                У нас есть места в машинах / мы ищем места в машинах!
+        </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Вот Framacalc таблица для организации: <a href="https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww">https://lite.framacalc.org/xyfci2szsm-oddtale2025-acww</a>.
             </td>
         </tr>
     </table>
 
-    <h3>Covoiturages</h3>
+    <h3>Вопросы, не подлежащие классификации</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
 
             </td>
             <td class="title">
-                On a des places dans des voitures / on cherche des places dans des voitures !
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Il y a un framapad qui peut être retrouvé ici : , n'hésitez pas à y jeter un coup d'oeil pour vous
-                organiser !
-            </td>
-        </tr>
-    </table>
-
-    <h3>Les questions inclassables</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-
-            </td>
-            <td class="title">
-                Est-ce que vous avez bien réfléchi avant de prendre une telle
-                décision ?
+                Хорошо ли вы подумали, прежде чем принять такое решение?
             </td>
         </tr>
         <tr>
