Updated q-a ru and fr

--- a/q-a-fr/index.html
+++ b/q-a-fr/index.html
@@ -98,6 +98,19 @@ Dimanche :
                 Un peu tout le temps, n'hésitez pas à prévoir des boîtes pour repartir avec des souvenirs mangeables !
             </td>
         </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+        <td class="title">
+            Comment on fait si on a des restrictions alimentaires ?
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract">
+            N'hésitez pas à nous écrire si vous avez quelque inquiétude que ce soit concernant la nourriture. Nous avons essayé de prendre en compte toutes les réponses à notre questionnaire, et les listes d'ingrédients de toutes les recettes seront disponibles à côté des plats.
+        </td>
+    </tr>
     </table>
 
     <h3>Cadeaux</h3>
@@ -140,12 +153,42 @@ Dimanche :
 
             </td>
             <td class="title">
-                Est-ce que les animaux sont bienvenus ?
+                Qu'est ce qui est prévu pour les enfants ?
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Malheureusement les animaux ne sont pas bienvenus : le domaine est ouvert sur la route et surtout sur la maison des propriétaires, qui possèdent un chien qui n'aime pas partager son territoire. Des photos de vos animaux sont par contre tout à fait bienvenues, et ce à tout moment !
+                Il y a beaucoup d'enfants invités ! Il y a des jeux, des jouets, des livres, et de la musique prévus. Nous n'avons par contre pas de chaises hautes ni de vaisselle adaptée, n'hésitez pas à prendre des réhausseurs si vous en avez besoin ! 
+                <br>
+                Nous avons une ou deux personnes prévues pour surveiller le sommeil des enfants le soir, de 20h à 2h du matin.
+            </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                Est-ce que les animaux sont les bienvenus ?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Malheureusement les animaux ne sont pas les bienvenus : le domaine est ouvert sur la route et surtout sur la maison des propriétaires, qui possèdent un chien qui n'aime pas partager son territoire. Des photos de vos animaux sont par contre tout à fait bienvenues, et ce à tout moment !
+            </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                Sommeil ?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Si vous avez mis dans le questionnaire que vous vouliez dormir à la Boutardière, que ce soit en tente ou en dortoir, on devrait vous avoir contacté ! Si ce n'est pas le cas, dites-le nous au plus vite.
+                <br>
+                Si vous dormez à la Boutardière, pensez à prévoir : des serviettes, des draps/un sac de couchage. 
             </td>
         </tr>
     </table>
