--- a/q-a-ru/index.html
+++ b/q-a-ru/index.html
@@ -175,8 +175,7 @@ Dimanche :
         </tr>
         <tr>
             <td class="abstract">
-                Honnêtement, plutôt oui. La décision de réunir nos ami·e·s et nos familles est quelque chose qui nous
-                tient vraiment à coeur, et nous avions envie d'organiser ce moment. Hâte de le partager avec vous !
+                Честно говоря, да. Мы очень хотели собрать наших друзей и наши семьи вместе, и мы очень рады, что у нас хоть частично это получится. Очень вас ждем!
             </td>
         </tr>
     </table>
