Updated navigation ru

--- a/q-a-ru/index.html
+++ b/q-a-ru/index.html
@@ -51,7 +51,7 @@
                 <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Часто задаваемые вопросы" href="q-a-ru">Вопросы</a>
+                <a class="current" title="Часто задаваемые вопросы" href="q-a-ru">ЧаВо</a>
             </td>
 <!--            <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
