--- a/directions-ru/index.html
+++ b/directions-ru/index.html
@@ -45,7 +45,10 @@
                 <a class="current" title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
-                <a title="Материалы" href="ressources-ru">Материалы</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a> 
+            </td>
+            <td class="navigation">
+                <a title="Часто задаваемые вопросы" href="q-a-ru">ЧаВо</a>
             </td>
      <!--       <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
