--- a/home-ru/index.html
+++ b/home-ru/index.html
@@ -50,6 +50,9 @@
             <td class="navigation">
                 <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
+            <td class="navigation">
+                <a title="Часто задаваемые вопросы" href="q-a-ru">ЧаВо</a>
+            </td>
 <!--            <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td> -->
