--- a/q-a-en/index.html
+++ b/q-a-en/index.html
@@ -98,6 +98,19 @@ Dimanche :
                 More or less all the time, so come with boxes if you'd like to take home edible souvenirs!
             </td>
         </tr>
+        <tr>
+     <td class="date" rowspan="2">
+
+            </td>
+        <td class="title">
+            What if I have dietary restrictions?
+        </td>
+    </tr>
+    <tr>
+    <td class="abstract">
+            Please write to us if you have any concerns about the food. We have tried to take into account all responses to our registration form, and ingredient lists for all recipes will be available alongside the dishes.        
+    </td>
+    </tr>
     </table>
 
     <h3>Gifts</h3>
@@ -138,12 +151,41 @@ Dimanche :
 
             </td>
             <td class="title">
+                What's planned for the children?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                There's a lot of children invited! There'll be games, toys, books and music. However, we don't have any high chairs or adapted tableware, so don't hesitate to bring booster seats if you need them! 
+                <br>
+                We have one or two people in charge of keeping an eye on the children's sleep in the evening, from 8pm to 2am.
+                        </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
                 Are pets welcome?
             </td>
         </tr>
         <tr>
             <td class="abstract">
                 Unfortunately, pets are not welcome: the estate is open to the road and, above all, to the house of the owners, who have a dog that doesn't like to share its territory. Photos of your pets, however, are very welcome at any time!
+            </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                Sleep?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                If you said in the questionnaire that you wanted to sleep at La Boutardière, whether in a tent or a dormitory, we should have contacted you! If not, please let us know as soon as possible.                <br>
+                If you're staying at La Boutardière, please bring towels, and sheets and/or a sleeping bag. 
             </td>
         </tr>
     </table>
