--- a/q-a-ru/index.html
+++ b/q-a-ru/index.html
@@ -42,7 +42,7 @@
                 <a title="Записаться на конференцию" href="registration-ru">Запись</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Программа конференции" href="program-ru">Программа</a> 
+                <a title="Программа конференции" href="program-ru">Программа</a> 
             </td>
             <td class="navigation">
                 <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
@@ -97,6 +97,19 @@ Dimanche :
                 Более или менее все время, так что приходите с контейнерами, если хотите увезти домой съедобные сувениры!
             </td>
         </tr>
+        <tr>
+            <td class="date" rowspan="2">
+       
+                   </td>
+               <td class="title">
+                А если у меня диетические ограничения?
+               </td>
+           </tr>
+           <tr>
+           <td class="abstract">
+            Пожалуйста, напишите нам, если у вас есть какие-либо опасения по поводу еды. Мы постарались учесть все ответы на нашу регистрационную форму. Списки ингредиентов всех рецептов будут доступны рядом с блюдами.        
+        </td>
+           </tr>
     </table>
 
     <h3>Подарки</h3>
@@ -130,6 +143,34 @@ Dimanche :
             <td class="abstract">
                 И да, и нет: если у вас есть необычная одежда, которую вы любите, но редко надеваете, то самое время блеснуть!
                 Но, пожалуйста, отдавайте предпочтение комфорту, мы хотим, чтобы вы чувствовали себя как можно лучше, а блестки - это просто приятный бонус.
+            </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                Что запланировано для детей?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Приглашено много детей! Будут игры, игрушки, книги и музыка. Стульчиков и адаптированной посуды у нас к сожалению нет, поэтому пожалуйста берите с собой бустеры, если они вам понадобятся! 
+                <br>
+                Будет один или два человека, которые будут присматривать за сном детей вечером, с 8 вечера до 2 часов ночи.                </td>
+        </tr>
+        <tr>
+            <td class="date" rowspan="2">
+
+            </td>
+            <td class="title">
+                Сон?
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Если вы указали в анкете, что хотите переночевать в La Boutardière, в палатке или в общежитии, мы уже должны были связаться с вами! Если нет, пожалуйста, сообщите нам об этом как можно скорее.  <br>
+                Если вы будете ночевать в La Boutardière, пожалуйста, возьмите с собой полотенца, простыни и/или спальный мешок. 
             </td>
         </tr>
         <tr>
