--- a/directions-en/index.html
+++ b/directions-en/index.html
@@ -47,6 +47,9 @@
             <td class="navigation">
                 <a title="Ressources" href="ressources-en">Resources</a>
             </td>
+            <td class="navigation">
+                <a title="Frequently asked questions" href="q-a-en"> FAQ</a>
+            </td>
   <!--          <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td> -->
