Updated homes for better navigation

--- a/home-ru/index.html
+++ b/home-ru/index.html
@@ -36,7 +36,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Выбор языка" href=".">Языки</a>
+                <a title="Выбор языка" href=".">Языки</a>
             </td>
             <td class="navigation">
                 <a title="Записаться на конференцию" href="registration-ru">Запись</a>
