Added faire part to flyer

--- a/flyer/index.html
+++ b/flyer/index.html
@@ -59,8 +59,8 @@
     <table class="flyers">
         <tr>
             <td class="flyer">
-                <a href="assets/MathConnections-Flyer.pdf">
-                    <img src="assets/MathConnections-Flyer.png" alt="MathConnections Color Flyer" style="width:100%">
+                <a href="assets/Faire-part-qr-code.pdf">
+                    <img src="assets/1.png" alt="Faire part with QR code" style="width:100%">
                 </a>
             </td>
             <td class="flyer">
